--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
+    "npm": "^6.14.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -21,8 +23,10 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
+    "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.3.11",
-    "react-navigation-tabs": "^2.8.11"
+    "react-navigation-tabs": "^2.8.11",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
